--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
-    "@next/font": "13.0.7",
+    "@next/font": "^13.0.7",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
+    "lightgallery": "^2.7.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-masonry-css": "^1.0.16",
     "typescript": "4.9.4"
   },
   "devDependencies": {
